--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./css/normalize.css" />
     <link rel="stylesheet" href="./fonts/font-awesome.min.css" />
     <link
+
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
       integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
@@ -23,6 +24,9 @@
         <!--menu-->
         <nav class="menu">
           <ul class="menu-horizontal">
+            <img src="./recursos/img/logo.png" alt="logo" width="95" height="95"></img>
+        
+        
             <li><a href="#">Inicio</a></li>
             <li>
               <a href="#">Productos</a>
@@ -55,6 +59,7 @@
         </nav>
       </div>
     </header>
+    <h1 class="center">BELLEZA MÁS ALLÁ DE LA BELLEZA</h1>
 
     <main>
       <section class="productos" id="productos">
@@ -72,7 +77,7 @@
             </div>
             <div class="contenido">
               <h3>Plancha para el cabello</h3>
-              <div class="precio">$45.99 <span> $15.99</span></div>
+              <div class="precio">$65.99 <span> $75.99</span></div>
             </div>
           </div>
           <div class="caja">
@@ -87,7 +92,7 @@
             </div>
             <div class="contenido">
               <h3>Shampoo y Acondicionador</h3>
-              <div class="precio">$45.99 <span> $15.99</span></div>
+              <div class="precio">$45.99 <span> $55.99</span></div>
             </div>
           </div>
           <div class="caja">
@@ -117,7 +122,7 @@
             </div>
             <div class="contenido">
               <h3>Secadora de cabello</h3>
-              <div class="precio">$45.99 <span> $15.99</span></div>
+              <div class="precio">$55.99 <span> $65.99</span></div>
             </div>
           </div>
         </div>
@@ -195,7 +200,7 @@
             </div>
             <div class="contenido">
               <h3>Maquillaje de día </h3>
-              <div class="precio">$65.99 <span> $15.99</span></div>
+              <div class="precio">$65.99 <span> $75.99</span></div>
             </div>
           </div>
           <div class="caja">
@@ -210,7 +215,7 @@
             </div>
             <div class="contenido">
               <h3>Maquillaje juvenil </h3>
-              <div class="precio">$45.99 <span> $10.99</span></div>
+              <div class="precio">$80.99 <span> $90.99</span></div>
             </div>
           </div>
           <div class="caja">
@@ -225,7 +230,7 @@
             </div>
             <div class="contenido">
               <h3>Maquillaje de noche</h3>
-              <div class="precio">$74.34 <span> $13.99</span></div>
+              <div class="precio">$73.34 <span> $83.99</span></div>
             </div>
           </div>
           <div class="caja">
@@ -240,7 +245,7 @@
             </div>
             <div class="contenido">
               <h3>Maquillaje de Fantasía </h3>
-              <div class="precio">$85.99 <span> $15.99</span></div>
+              <div class="precio">$75.99 <span> $85.99</span></div>
             </div>
           </div>
         </div>
